--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Abigail Buchwald | About</title>
-        <link rel="stylesheet"type="text/css"href="about.css"/>
+        <link rel="stylesheet"type="text/css"href="About.css"/>
  <!--do I need to link css pages for all pages even if linked to main html page-->
     </head>
     <body>
@@ -12,9 +12,9 @@
         <nav>
             <ul id="menu">
                 <li class="header"><a href="lab4.html">Home</a></li>
-                <li class="header"><a href="About">About</a></li>
-                <li class="header"><a href="Work">Work</a></li>
-                <li class="header"><a href="Contact">Contact</a></li>
+                <li class="header"><a href="About.html">About</a></li>
+                <li class="header"><a href="Work.html">Work</a></li>
+                <li class="header"><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
         <main id="main content">   
