--- a/Work.html
+++ b/Work.html
@@ -11,9 +11,9 @@
     <nav>
         <ul>
             <li class="header"><a href="lab4.html">Home</a></li>
-            <li class="header"><a href="About">About</a></li>
-            <li class="header"><a href="Work">Work</a></li>
-            <li class="header"><a href="Contact">Contact</a></li>
+            <li class="header"><a href="About.html">About</a></li>
+            <li class="header"><a href="Work.html">Work</a></li>
+            <li class="header"><a href="Contact.html">Contact</a></li>
         </ul>
     </nav>
      <main id="main content">
