--- a/About.html
+++ b/About.html
@@ -3,7 +3,6 @@
     <head>
         <title>Abigail Buchwald | About</title>
         <link rel="stylesheet"type="text/css"href="About.css"/>
- <!--do I need to link css pages for all pages even if linked to main html page-->
     </head>
     <body>
         <header>
@@ -23,7 +22,8 @@
             <p id="p1">I'm Abigail Buchwald, I'm a graphic designer based in the Boston area. I grew up in Colorado, but have also lived in North Carolina, Massachusetts, and Italy. This diverse cultural background has allowed me to bring a unique multi-cultural influence into my work.<br>
             <p id="p2">My parents knew I would go into design before I did. My mom always tells this story about me drawing a wooden model as a ballerina at a children's area in an art museum. I was about 5 or 6 years old and a worker came up to my mother and said, “I have never seen a child so focused on what they are making”. My mom claims that was the point she knew I would go into a creative field. When I got older I had aspirations of going into Physics or Engineering, but then realized I need to be actively creating in order to function. Graphic design has been the perfect medium between visual creation and analytical, mathematical design.</p>
             <h3>I have an extensive background in various forms of visual art and design, including:</h3>
-                <ul id="art">
+                <div class="art">
+                <ul>
                     <li>drawing</li>
                     <li>watercolor painting</li>
                     <li>collage</li>
@@ -33,8 +33,10 @@
                     <li>illustration</li>
                     <li>graphic and logo design</li>
                 </ul>
+            </div>
             <h3>I have previously worked at:</h3>
-                <ol id="job">
+                <div class="job">
+                <ol>
                     <li>Blaze Pizza</li>
                     <li>Roots and Wings School of Art</li>
                     <li>Mount Inspiration Design Co.</li>
@@ -42,6 +44,7 @@
                     <li>Retro Coffee</li>
                     <li>Jovie</li>
                 </ol>
+            </div>
         </main>
             <footer>
                 <p>Copyright &copy; 2023 by Abigail Buchwald</p>
