--- a/About.html
+++ b/About.html
@@ -19,6 +19,7 @@
         <main id="main content">   
         <h2>About</h2>
         <img src="Profilepic.JPEG" height="500" alt="Abigail holding flowers in a field" class="pfp">
+            <p id="credit">Photo by <a href="https://express.adobe.com/page/zrvKoxCpfWsCy/?fbclid=PAAaYFk4DdOr-1DA-DnICWx_aAOjy2UqqU2xNmNANawFWWk5VY01Zg31Hdw_o_aem_AZMh1BwcEiasgJlcl9L0HeaK8-LcNzXKPwnXGf2iqS6h1IPuytzwOnoxWwD3JS5QyK0">Sophia Chiaramida</a></p>
             <p id="p1">I'm Abigail Buchwald, I'm a graphic designer based in the Boston area. I grew up in Colorado, but have also lived in North Carolina, Massachusetts, and Italy. This diverse cultural background has allowed me to bring a unique multi-cultural influence into my work.<br>
             <p id="p2">My parents knew I would go into design before I did. My mom always tells this story about me drawing a wooden model as a ballerina at a children's area in an art museum. I was about 5 or 6 years old and a worker came up to my mother and said, “I have never seen a child so focused on what they are making”. My mom claims that was the point she knew I would go into a creative field. When I got older I had aspirations of going into Physics or Engineering, but then realized I need to be actively creating in order to function. Graphic design has been the perfect medium between visual creation and analytical, mathematical design.</p>
             <h3>I have an extensive background in various forms of visual art and design, including:</h3>
