--- a/About.html
+++ b/About.html
@@ -5,50 +5,50 @@
         <link rel="stylesheet"type="text/css"href="About.css"/>
     </head>
     <body>
-        <header>
-            <h1>Abigail Buchwald</h1>
-        </header>
+       <div id="flex-container">
+        <div id="flex-item1">
+            <header>
+                <img src="logo.jpg" alt="Abigail Buchwald" class="logo">
+            </header>
+        </div>
         <nav>
-            <ul id="menu">
-                <li class="header"><a href="lab4.html">Home</a></li>
-                <li class="header"><a href="About.html">About</a></li>
-                <li class="header"><a href="Work.html">Work</a></li>
-                <li class="header"><a href="Contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <main id="main content">   
-        <h2>About</h2>
-        <img src="Profilepic.JPEG" height="500" alt="Abigail holding flowers in a field" class="pfp">
+           <div id="flex-item2">
+            <p><a href="lab4.html">Home</a></p>
+           </div>
+           <div id="flex-item3">
+            <p><a href="About.html">About</a></p>
+           </div>
+           <div id="flex-item4">
+            <p><a href="Work.html">Work</a></p>
+           </div>
+           <div id="flex-item5">
+            <p><a href="Contact.html">Contact</a></p>
+           </div>
+         </nav>
+        </div>
+    </div>
+        <main id="main content">  
+        <img src="profilepic.jpg" alt="Abigail holding flowers in a field" class="pfp">
             <p id="credit">Photo by <a href="https://express.adobe.com/page/zrvKoxCpfWsCy/?fbclid=PAAaYFk4DdOr-1DA-DnICWx_aAOjy2UqqU2xNmNANawFWWk5VY01Zg31Hdw_o_aem_AZMh1BwcEiasgJlcl9L0HeaK8-LcNzXKPwnXGf2iqS6h1IPuytzwOnoxWwD3JS5QyK0">Sophia Chiaramida</a></p>
-            <p id="p1">I'm Abigail Buchwald, I'm a graphic designer based in the Boston area. I grew up in Colorado, but have also lived in North Carolina, Massachusetts, and Italy. This diverse cultural background has allowed me to bring a unique multi-cultural influence into my work.</p><br>
-            <p id="p2">My parents knew I would go into design before I did. My mom always tells this story about me drawing a wooden model as a ballerina at a children's area in an art museum. I was about 5 or 6 years old and a worker came up to my mother and said, “I have never seen a child so focused on what they are making”. My mom claims that was the point she knew I would go into a creative field. When I got older I had aspirations of going into Physics or Engineering, but then realized I need to be actively creating in order to function. Graphic design has been the perfect medium between visual creation and analytical, mathematical design.</p>
+                <h1>Hi, I'm Abigail Buchwald</h1>
+            <h3 id="p1">I'm a graphic designer based in the Boston area.</h3>
+            <p id="p2"> I grew up in Colorado, but have also lived in North Carolina, Massachusetts, and Italy. My parents knew I would go into design before I did. My mom always tells this story about me drawing a wooden model as a ballerina at a children's area in an art museum. I was about 5 years old and a worker came up to my mother and said, “I have never seen a child so focused on what they are making”. My mom claims that was the point she knew I would go into a creative field. When I got older I had aspirations of going into Physics or Engineering, but then realized I need to be actively creating in order to function. Graphic design has been the perfect field between visual creation and analytical, mathematical design.</p>
             <h3>I have an extensive background in various forms of visual art and design, including:</h3>
                 <div class="art">
                 <ul>
-                    <li>drawing</li>
-                    <li>watercolor painting</li>
-                    <li>collage</li>
-                    <li>printmaking</li>
-                    <li>crocheting and textile art</li>
-                    <li>furniture design and woodworking</li>
-                    <li>illustration</li>
-                    <li>graphic and logo design</li>
+                    <li><a href="charcoal.html">drawing</a></li>
+                    <li><a href="illustration.html">watercolor painting</a></li>
+                    <li><a href="collage.html">collage</a></li>
+                    <li><a href="printmaking.html">printmaking</a></li>
+                    <li><a href="croch.html">crocheting and textile art</a></li>
+                    <li><a href="3d.html">furniture design and woodworking</a></li>
+                    <li><a href="illustration.html">illustration</a></li>
+                    <li><a href="digital.html">graphic and logo design</a></li>
+                    <li><a href="film.html">film photography</a></li>
                 </ul>
-            </div>
-            <h3>I have previously worked at:</h3>
-                <div class="job">
-                <ol>
-                    <li>Blaze Pizza</li>
-                    <li>Roots and Wings School of Art</li>
-                    <li>Mount Inspiration Design Co.</li>
-                    <li>Atomic Cafe</li>
-                    <li>Retro Coffee</li>
-                    <li>Jovie</li>
-                </ol>
-            </div>
         </main>
             <footer>
-                <p>Copyright &copy; 2023 by Abigail Buchwald</p>
+                <a href="credits.html"><p>Copyright &copy; 2023 by Abigail Buchwald</p></a>
             </footer>
     </body>
  </html>
