--- a/Contact.html
+++ b/Contact.html
@@ -5,24 +5,36 @@
         <link rel="stylesheet"type="text/css"href="contact.css"/>
     </head>
     <body>
-        <header>
-            <h1>Abigail Buchwald</h1>
-        </header>
-    <nav>
-        <ul id="menu">
-            <li class="header"><a href="lab4.html">Home</a></li>
-            <li class="header"><a href="About.html">About</a></li>
-            <li class="header"><a href="Work.html">Work</a></li>
-            <li class="header"><a href="Contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    
+ <div id="flex-container">
+        <div id="flex-item1">
+            <header>
+                <img src="logo.jpg" alt="Abigail Buchwald" class="logo">
+            </header>
+        </div>
+        <nav>
+           <div id="flex-item2">
+            <p><a href="lab4.html">Home</a></p>
+           </div>
+           <div id="flex-item3">
+            <p><a href="About.html">About</a></p>
+           </div>
+           <div id="flex-item4">
+            <p><a href="Work.html">Work</a></p>
+           </div>
+           <div id="flex-item5">
+            <p><a href="Contact.html">Contact</a></p>
+           </div>
+         </nav>
+        </div>
+    </div>
     <main id="main content">
-        <h2>Contact</h2>
-        <img src="inprogress.png" height="500" alt="in progress sign" class="center">
+        <body>
+            <h3>Fill out this form to contact me, I will respond directly as soon as possible! </h3>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCkrbaWlKhLqE8YM3vhkfmNaiNpymvrc9wLv35wMnNgOC1iA/viewform?usp=sf_link" id="contactform"><img src="contact.jpg" alt="contact form" class="contact">
+        </body>
     </main>
      <footer>
-        <p>Copyright &copy; 2023 by Abigail Buchwald</p>
+        <a href="credits.html"><p>Copyright &copy; 2023 by Abigail Buchwald</p></a>
      </footer>
     </body>
 </html>
