--- a/Work.html
+++ b/Work.html
@@ -5,24 +5,70 @@
         <link rel="stylesheet"type="text/css"href="work.css"/>
     </head>
     <body>
-        <header>
-            <h1>Abigail Buchwald</h1>
-        </header>
-    <nav>
-        <ul>
-            <li class="header"><a href="lab4.html">Home</a></li>
-            <li class="header"><a href="About.html">About</a></li>
-            <li class="header"><a href="Work.html">Work</a></li>
-            <li class="header"><a href="Contact.html">Contact</a></li>
-        </ul>
-    </nav>
+        <div id="flex-container">
+        <div id="flex-item1">
+            <header>
+                <img src="logo.jpg" alt="Abigail Buchwald" class="logo">
+            </header>
+        </div>
+        <nav>
+           <div id="flex-item2">
+            <p><a href="lab4.html">Home</a></p>
+           </div>
+           <div id="flex-item3">
+            <p><a href="About.html">About</a></p>
+           </div>
+           <div id="flex-item4">
+            <p><a href="Work.html">Work</a></p>
+           </div>
+           <div id="flex-item5">
+            <p><a href="Contact.html">Contact</a></p>
+           </div>
+         </nav>
+        </div>
+    </div>
      <main id="main content">
-        <h2>Work</h2>
-        <p>View my portfolio <a href="https://abbiebuchwald.myportfolio.com/"> here!</a></p>
-        <img src="inprogress.png" height="500" alt="in progress sign" class="center">
+        <div id="flex-container2">
+            <div id="flex-item6">
+                <p class="worktext">digital design</p>
+                <a href="digital.html"><img src="snail.jpg" alt="snail shirt design" class="workmenu"></a>
+            </div>
+            <div id="flex-item7">
+                <p class="worktext">woodworking & 3D sculpture</p>
+                <a href="3d.html"><img src="meditativebreathing2.jpg" alt="wood sculpture" class="workmenu"></a>
+            </div>
+            <div id="flex-item8">
+                <p class="worktext">illustration & watercolor</p>
+                <a href="illustration.html"><img src="catkitchen.jpeg"alt="cat in a kitchen illustration" class="workmenu"></a>
+            </div>
+            <div id="flex-item9">
+                <p class="worktext">charcoal drawing</p>
+                <a href="charcoal.html"><img src="midnightcity2022.jpeg"alt="still life" class="workmenu"></a>
+            </div>
+        </div>
+        <div id="flex-container3">
+            <div id="flex-item10">
+                <p class="worktext">crochet & textiles</p>
+                <a href="croch.html"><img src="sporey.jpg"alt="crochet arm warmers and top" class="workmenu"></a>
+            </div>
+            <div id="flex-item11">
+                <p class="worktext">collage</p>
+                <a href="collage.html"><img src="forportfolio.jpeg"alt="collage of park" class="workmenu"></a>
+            </div>
+           
+            <div id="flex-item12">
+                <p class="worktext">film photography</p>
+                <a href="film.html"><img src="talia.JPG"alt="dimly lit face photo" class="workmenu"></a>
+            </div>
+            <div id="flex-item13">
+                <p class="worktext">printmaking</p>
+                <a href="printmaking.html"><img src="drown.jpeg"alt="blue water linoleum print" class="workmenu"></a>
+            </div>
+
+        </div>
     </main>
      <footer>
-        <p>Copyright &copy; 2023 by Abigail Buchwald</p>
+        <a href="credits.html"><p>Copyright &copy; 2023 by Abigail Buchwald</p></a>
      </footer>
     </body>
 </html>
