--- a/lab4.html
+++ b/lab4.html
@@ -6,22 +6,24 @@
     </head>
     <body>
         <header>
-            <h1>Abigail Buchwald</h1>
+            <img src="logo.jpg" alt="Abigail Buchwald" class="logo">
+            <img src="subtext.jpg" alt="wonk with precision" class="subtext">
         </header>
-        <nav>
-            <ul>
-                <li class="header"><a href="lab4.html">Home</a></li>
-                <li class="header"><a href="About.html">About</a></li>
-                <li class="header"><a href="Work.html">Work</a></li>
-                <li class="header"><a href="Contact.html">Contact</a></li>
-            </ul>
-        </nav>
-         <main id="main content">
-            <h2>Welcome!</h2>
-            <img src="inprogress.png" height="500" alt="in progress sign" class="center">
+        <main id="main content">
+            <div id="flex-container">
+                <div id="flex-item1">
+                <a href="About.html"><img src="abouthomepg.jpg"></a>
+                </div>
+                <div id="flex-item2">
+                <a href="Work.html"><img src="workhome.jpg"></a>
+                </div>
+                <div id="flex-item3">
+                <a href="Contact.html"><img src="contacthomepg.jpg"></a>
+                </div>
+            </div>
          </main>
          <footer>
-            <p>Copyright &copy; 2023 by Abigail Buchwald</p>
+            <a href="credits.html"><p>Copyright &copy; 2023 by Abigail Buchwald</p></a>
          </footer>
     </body>
 </html>
