--- a/credits.html
+++ b/credits.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <main>
-        <h3>All content is of my own creation, with the exception of the headshot taken by <a href="https://express.adobe.com/page/zrvKoxCpfWsCy/?fbclid=PAAaYFk4DdOr-1DA-DnICWx_aAOjy2UqqU2xNmNANawFWWk5VY01Zg31Hdw_o_aem_AZMh1BwcEiasgJlcl9L0HeaK8-LcNzXKPwnXGf2iqS6h1IPuytzwOnoxWwD3JS5QyK0">Sophia Chiaramida.</a></h3>
+        <h3>All images and code-including the title typeface-are of my own creation, with the exception of the headshot taken by <a href="https://express.adobe.com/page/zrvKoxCpfWsCy/?fbclid=PAAaYFk4DdOr-1DA-DnICWx_aAOjy2UqqU2xNmNANawFWWk5VY01Zg31Hdw_o_aem_AZMh1BwcEiasgJlcl9L0HeaK8-LcNzXKPwnXGf2iqS6h1IPuytzwOnoxWwD3JS5QyK0">Sophia Chiaramida.</a></h3>
     </main>
     <footer>
         <a href="credits.html"><p>Copyright &copy; 2023 by Abigail Buchwald</p></a>
