--- a/About.html
+++ b/About.html
@@ -28,7 +28,7 @@
         </div>
     </div>
         <main id="main content">  
-        <img src="profilepic.jpg" alt="Abigail holding flowers in a field" class="pfp">
+        <img src="Profilepic.jpg" alt="Abigail holding flowers in a field" id="pfp">
             <p id="credit">Photo by <a href="https://express.adobe.com/page/zrvKoxCpfWsCy/?fbclid=PAAaYFk4DdOr-1DA-DnICWx_aAOjy2UqqU2xNmNANawFWWk5VY01Zg31Hdw_o_aem_AZMh1BwcEiasgJlcl9L0HeaK8-LcNzXKPwnXGf2iqS6h1IPuytzwOnoxWwD3JS5QyK0">Sophia Chiaramida</a></p>
                 <h1>Hi, I'm Abigail Buchwald</h1>
             <h3 id="p1">I'm a graphic designer based in the Boston area.</h3>
