--- a/digital.html
+++ b/digital.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
            <div id="flex-item2">
-            <p><a href="lab4.html">Home</a></p>
+            <p><a href="index.html">Home</a></p>
            </div>
            <div id="flex-item3">
             <p><a href="About.html">About</a></p>
