--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Abigail Buchwald | home</title>
-        <link rel="stylesheet"type="text/css"href="lab4.css"/>
+        <link rel="stylesheet"type="text/css"href="lab4main.css"/>
     </head>
     <body>
         <header>
